2014-07-02  Florian Weimer  <fweimer@redhat.com>

	* locale/setlocale.c (setlocale): Use strdup for allocating
	composite name copy.

2014-07-10  Siddhesh Poyarekar  <siddhesh@redhat.com>

	Sync up with gnulib.
	* misc/error.c: Use !_LIBC instead of HAVE_CONFIG_H.
	[!_LIBC && ENABLE_NLS]: Include gettext.h.
	[_LIBC]: Define USE_UNLOCKED_IO, _GL_ATTRIBUTE_FORMAT_PRINTF
	and _GL_ARG_NONNULL.
	[USE_UNLOCKED_IO]: Include unlocked-io.h.
	[!_LIBC]: Include code for Windows and Cygwin.
	[!_LIBC && !HAVE_DECL_STRERROR_R && !STRERROR_R_CHAR_P]:
	Include prototype for int strerror_r.
	[!_LIBC] (is_open): New function.
	(flush_stdout): New function.
	(print_errno_message): Use it.
	(error): Likewise.
	(error_at_line): Likewise.
	(error_tail) Add function attribute macros.  Use
	__builtin_expect.

	* time/strptime_l.c [_LIBC]: Define HAVE_LOCALTIME_R.

	* time/strftime_l.c [_LIBC]: Define HAVE_STRFTIME.

	* io/ftw.c: Include sys/param.h unconditionally.

	* locale/programs/simple-hash.c [!HAVE_OBSTACK]: Remove code.

	[BZ #17125]
	* sysdeps/unix/sysv/linux/check_pf.c (cache): Don't use
	libc_freeres_ptr.
	(freecache): New function to free CACHE on exit.

	* sunrpc/xdr.c (xdr_string): Add comment about SIZE
	initialization.

2014-07-09  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/fpu/libm-test-ulps: Update.

	* sysdeps/sparc/nptl/internaltypes.h: Delete.
	* sysdeps/sparc/nptl/sparc-nptl.h: New file.
	* sysdeps/sparc/nptl/pthread_barrier_destroy.c: Include it.
	* sysdeps/sparc/nptl/pthread_barrier_init.c: Likewise.
	* sysdeps/sparc/nptl/pthread_barrier_wait.c: Likewise.
	* sysdeps/sparc/nptl/sem_init.c: Likewise.
	* sysdeps/sparc/nptl/sem_post.c: Likewise.
	* sysdeps/sparc/nptl/sem_timedwait.c: Likewise.
	* sysdeps/sparc/nptl/sem_wait.c: Likewise.
	* sysdeps/sparc/sparc32/nptl/pthread_barrier_wait.c: Likewise.
	* sysdeps/sparc/sparc32/nptl/sem_post.c: Likewise.
	* sysdeps/sparc/sparc32/nptl/sem_timedwait.c: Likewise.